Add account information of another instance as a contact.

--- a/public/500.html
+++ b/public/500.html
@@ -40,6 +40,7 @@
       <h1>メンテナンス中</h1>
       <p>現在、サーバーメンテナンスを行なっています。<br />
       この状態が長く続く場合は以下まで連絡をいただけると幸いです。</p>
+      <p>Mastodon：<a href="https://mstdn.maud.io/@mayaeh">@mayaeh</a></p>
       <p>Twitter：<a href="https://twitter.com/mayaeh">@mayaeh</a></p>
     </div>
   </div>
